# curso-python-axity

./: .gitignore  README.md
.github/workflows/: ci.yml
10TDD/tdd_lab/: .coverage  pyproject.toml
10TDD/tdd_lab/.hypothesis/constants/: da39a3ee5e6b4b0d  f8c6f8c05677d720
10TDD/tdd_lab/src/tdd_lab/: pricing.py
10TDD/tdd_lab/tests/: test_pricing.py
11CONCU-RENDIMIENTO/concurrency_lab/: pyproject.toml
11CONCU-RENDIMIENTO/concurrency_lab/src/concurrency_lab/: async_fetcher.py  cpu_task.py  main.py  sync_fetcher.py
12SOLID/solid_lab/: pyproject.toml
12SOLID/solid_lab/src/solid_lab/: domain.py  ports.py  service.py
12SOLID/solid_lab/src/solid_lab/adapters/: memory_repo.py  sql_models.py  sql_repo.py
12SOLID/solid_lab/tests/: test_service.py
13PATRONES-DISENIO/patterns_lab/: pyproject.toml
13PATRONES-DISENIO/patterns_lab/src/patterns_lab/adapters/: external_adapter.py
13PATRONES-DISENIO/patterns_lab/src/patterns_lab/caching/: cache_decorator.py
13PATRONES-DISENIO/patterns_lab/src/patterns_lab/pricing/: context.py  strategy.py
13PATRONES-DISENIO/patterns_lab/tests/: test_adapter.py  test_cache.py  test_strategy.py
14CIENCIA-DATOS/ds_lab/: pyproject.toml
14CIENCIA-DATOS/ds_lab/data/: sample.csv
14CIENCIA-DATOS/ds_lab/models/: model.pkl
14CIENCIA-DATOS/ds_lab/src/ds_lab/: inference.py  preprocess.py  train.py
15HEXAGONAL/hexagonal_lab/: pyproject.toml
15HEXAGONAL/hexagonal_lab/src/hexagonal_lab/application/: ports.py  use_cases.py
15HEXAGONAL/hexagonal_lab/src/hexagonal_lab/domain/: order.py
15HEXAGONAL/hexagonal_lab/src/hexagonal_lab/infrastructure/: http_notifier.py  memory_repo.py  sql_repo.py
15HEXAGONAL/hexagonal_lab/tests/: test_sql_repo.py  test_use_case.py
16ARQ-LIMPIA/clean_lab/: pyproject.toml
16ARQ-LIMPIA/clean_lab/src/clean_lab/entities/: order.py
16ARQ-LIMPIA/clean_lab/src/clean_lab/infrastructure/: sql_repo.py  sql_uow.py
16ARQ-LIMPIA/clean_lab/src/clean_lab/interfaces/: presenter.py  repository.py  uow.py
16ARQ-LIMPIA/clean_lab/src/clean_lab/use_cases/: create_order.py
16ARQ-LIMPIA/clean_lab/tests/: test_create_order.py
17EMP-DIST-CICD/packaging_lab/: Dockerfile  pyproject.toml
17EMP-DIST-CICD/packaging_lab/.github/workflows/: ci.yml
17EMP-DIST-CICD/packaging_lab/src/packaging_lab/: main.py
18CLI-AUTO/orders_cli/: pyproject.toml
18CLI-AUTO/orders_cli/src/orders_cli/: cli.py
19SEGURIDAD-MANT/secure_api/: Dockerfile  pyproject.toml
19SEGURIDAD-MANT/secure_api/src/secure_api/: main.py  settings.py
1ENTORNO-HERRAMIENTAS/mi-primer-proyecto/: README.md  pyproject.toml
1ENTORNO-HERRAMIENTAS/mi-primer-proyecto/tests/: test_ejemplo.py
20INTER-ECO/orders_grpc/: pyproject.toml
20INTER-ECO/orders_grpc/protos/: orders.proto
20INTER-ECO/orders_grpc/src/orders_grpc/: client.py  orders_pb2.py  orders_pb2_grpc.py  server.py
2FUNDAMENTOS-LENGUAJE/json_user_processor/: pyproject.toml  users.json
2FUNDAMENTOS-LENGUAJE/json_user_processor/src/json_user_processor/: main.py  processor.py  reader.py  validator.py
3PYTHONIC/pythonic_utils/: pyproject.toml
3PYTHONIC/pythonic_utils/src/pythonic_utils/: context_managers.py  decorators.py  generators.py  main.py
4OBJ-MODELO-DATOS/order_system/: .pre-commit-config.yaml  pyproject.toml
4OBJ-MODELO-DATOS/order_system/src/order_system/: entities.py  main.py  schemas.py
5TIPADO-CALIDAD/typed_quality_project/: .gitignore  pyproject.toml
5TIPADO-CALIDAD/typed_quality_project/src/typed_quality_project/: main.py  models.py
6LIB-ESTANDAR-E-S/file_pipeline/: pyproject.toml
6LIB-ESTANDAR-E-S/file_pipeline/data/: sales.csv
6LIB-ESTANDAR-E-S/file_pipeline/output/: report.json
6LIB-ESTANDAR-E-S/file_pipeline/src/file_pipeline/: main.py  processor.py
7HTTP-APIS/http_client_lab/: pyproject.toml
7HTTP-APIS/http_client_lab/src/http_client_lab/: client.py  main.py
8ORM/orm_lab/: alembic.ini  app.db  pyproject.toml
8ORM/orm_lab/alembic/: env.py
8ORM/orm_lab/alembic/versions/: 634b2f513155_initial.py
8ORM/orm_lab/src/orm_lab/: crud.py  database.py  main.py  models.py
8ORM/orm_lab/tests/: test_orm.py
9FASTAPI/fastapi_lab/: app.db  pyproject.toml
9FASTAPI/fastapi_lab/src/fastapi_lab/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py
9FASTAPI/fastapi_lab/src/fastapi_lab/routers/: auth.py  orders.py
9FASTAPI/fastapi_lab/tests/: conftest.py  test_orders.py
PROYECTO-FINAL/orders_service/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  orders.db  pyproject.toml
PROYECTO-FINAL/orders_service/migrations/: env.py
PROYECTO-FINAL/orders_service/migrations/versions/: 42816252cbef_create_orders_table.py
PROYECTO-FINAL/orders_service/src/orders_service/api/: main.py
PROYECTO-FINAL/orders_service/src/orders_service/application/ports/: event_publisher.py  repository.py
PROYECTO-FINAL/orders_service/src/orders_service/application/use_cases/: create_order.py
PROYECTO-FINAL/orders_service/src/orders_service/domain/: entities.py  exceptions.py
PROYECTO-FINAL/orders_service/src/orders_service/infrastructure/: config.py
PROYECTO-FINAL/orders_service/src/orders_service/infrastructure/db/: database.py  models.py  repository_sqlalchemy.py
PROYECTO-FINAL/orders_service/src/orders_service/infrastructure/messaging/: dummy_publisher.py
PROYECTO-FINAL/orders_service/tests/integration/: test_create_order_api.py
PROYECTO-FINAL/orders_service/tests/unit/: test_create_order_use_case.py  test_order.py
