[project]
name = "tdd-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "IRVING DELGADO",email = "irving.delgado@axity.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "tdd_lab", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "hypothesis (>=6.151.9,<7.0.0)"
]
